# scope

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: benchmark.yml  ci.yml  pages.yml  release.yml
benchmarks/: README.md
benchmarks/fixtures/csharp-api/: .fixture-manifest.sha256  .gitignore  CLAUDE.md.with-mcp  CLAUDE.md.with-scope  CLAUDE.md.without-scope  Program.cs
benchmarks/fixtures/csharp-large/: .fixture-manifest.sha256  CLAUDE.md.with-scope  CLAUDE.md.with-scope-preloaded  CLAUDE.md.without-scope  CSharpLargeApi.sln
benchmarks/fixtures/typescript-api/: .fixture-manifest.sha256  CLAUDE.md.with-scope  package.json  tsconfig.json
benchmarks/fixtures/typescript-large/: .fixture-manifest.sha256  CLAUDE.md.with-scope  CLAUDE.md.with-scope-preloaded  CLAUDE.md.without-scope  package-lock.json  package.json  tsconfig.json
benchmarks/results/latest/: environment.json  summary.md
benchmarks/results/v0.1.0/: harness-results.md  live-benchmark.md  phase4-ax-comparison.md  phase5-large-fixtures.md
benchmarks/results/v0.2.0/: phase6-diverse-matrix.md
benchmarks/results/v0.3.1/: automated-import.json  environment.json  phase7-isolated-benchmarks.md  summary.md
benchmarks/results/v0.4.0/: environment.json  phase8-import.json  phase8-isolated-benchmarks.md  summary.md
benchmarks/results/v0.5.0/: environment.json  phase10-import.json  phase10-methodology-report.md
benchmarks/runner/: Cargo.toml
benchmarks/runner/src/: agent.rs  behavior.rs  git.rs  main.rs  manifest.rs  reporter.rs  task.rs  verifier.rs
benchmarks/tasks/csharp/: cat-a-01-find-notification-failure.toml  cat-a-01-refactor-process-payment.toml  cat-a-02-rename-find-by-id.toml  cat-b-01-add-logging.toml  cat-b-01-fix-nullref-invoice.toml  cat-b-02-add-validation.toml  cat-c-01-extract-payment-validator.toml  cat-c-01-replace-dependency.toml  cat-c-02-extract-interface.toml  cat-d-01-add-receipt-service.toml  cat-d-01-make-async.toml  cat-d-02-change-return-type.toml  cat-e-01-explain-architecture.toml  cat-e-01-explain-payment-flow.toml  cat-e-01-find-retry-logic.toml  cat-e-02-find-notification.toml  cat-f-01-add-cancellation-token.toml  cat-f-01-add-structured-logging.toml  cat-g-01-review-payment-blast-radius.toml  cat-g-02-trace-notification-flow.toml
benchmarks/tasks/typescript/: cat-a-01-find-retry-logic.toml  cat-a-01-refactor-process-payment.toml  cat-a-02-rename-find-by-id.toml  cat-b-01-add-logging.toml  cat-b-01-fix-swallowed-error.toml  cat-b-02-add-validation.toml  cat-c-01-refactor-notification-strategy.toml  cat-c-01-replace-dependency.toml  cat-c-02-extract-interface.toml  cat-d-01-add-analytics-service.toml  cat-d-01-make-async.toml  cat-d-02-change-return-type.toml  cat-e-01-find-retry-logic.toml  cat-e-01-trace-payment-flow.toml  cat-e-02-find-notification.toml  cat-f-01-add-error-logging.toml  cat-g-01-review-payment-blast-radius.toml  cat-g-02-trace-notification-flow.toml
benchmarks/verify/: verify_caller_coverage.py
docs/: CLAUDE.md.snippet  index.html
mcp/: Cargo.toml
mcp/src/: main.rs  runner.rs  tools.rs
mcp/tests/: integration.rs
skills/: README.md  settings.json
skills/code-navigation/: SKILL.md
src/: error.rs  main.rs
src/commands/: deps.rs  diff.rs  entrypoints.rs  find.rs  flow.rs  impact.rs  index.rs  init.rs  map.rs  mod.rs  rdeps.rs  refs.rs  setup.rs  similar.rs  sketch.rs  source.rs  status.rs  summary.rs  trace.rs  workspace.rs
src/config/: mod.rs  project.rs  workspace.rs
src/core/: embedder.rs  graph.rs  indexer.rs  mod.rs  parser.rs  searcher.rs  watcher.rs  workspace_graph.rs
src/languages/: csharp.rs  go_lang.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/output/: formatter.rs  json.rs  mod.rs
src/queries/csharp/: edges.scm  symbols.scm
src/queries/go/: edges.scm  symbols.scm
src/queries/java/: edges.scm  symbols.scm
src/queries/python/: edges.scm  symbols.scm
src/queries/rust/: edges.scm  symbols.scm
src/queries/typescript/: edges.scm  symbols.scm
src/sql/: schema.sql
tests/fixtures/csharp-simple/: README.md
tests/fixtures/go-simple/: go.mod  main.go
tests/fixtures/java-simple/: pom.xml
tests/fixtures/python-simple/: pyproject.toml
tests/fixtures/rust-simple/: Cargo.toml
tests/fixtures/typescript-simple/: README.md
tests/integration/: test_csharp.rs  test_deps.rs  test_diff.rs  test_edge_cases.rs  test_entrypoints.rs  test_errors.rs  test_flow.rs  test_go.rs  test_impact.rs  test_incremental.rs  test_index.rs  test_java.rs  test_json.rs  test_map.rs  test_python.rs  test_rdeps.rs  test_refs.rs  test_rust_lang.rs  test_setup.rs  test_similar.rs  test_sketch.rs  test_source.rs  test_summary.rs  test_trace.rs  test_watch.rs  test_workspace.rs
tests/integration/snapshots/: test_deps__deps_payment_service.snap  test_entrypoints__entrypoints_typescript_simple.snap  test_entrypoints__entrypoints_typescript_simple_json.snap  (+10 more)
(+448 files in other folders)
