[package]
name = "scope"
version = "0.1.0"
edition = "2021"
description = "Code intelligence CLI for LLM coding agents"
license = "MIT"
repository = "https://github.com/rynhardt-engelbrecht/scope"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Tree-sitter core
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = "1"

[[test]]
name = "test_index"
path = "tests/integration/test_index.rs"

[[test]]
name = "test_sketch"
path = "tests/integration/test_sketch.rs"
