[package]
name = "scope"
version = "0.7.3"
edition = "2021"
description = "Code intelligence CLI for LLM coding agents"
license = "MIT"
repository = "https://github.com/rynhardt-engelbrecht/scope"

[[bin]]
name = "scope"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Tree-sitter core
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
tree-sitter-c-sharp = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"
ctrlc = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
strip = true
lto = "thin"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = "1"

[[test]]
name = "test_index"
path = "tests/integration/test_index.rs"

[[test]]
name = "test_sketch"
path = "tests/integration/test_sketch.rs"

[[test]]
name = "test_refs"
path = "tests/integration/test_refs.rs"

[[test]]
name = "test_deps"
path = "tests/integration/test_deps.rs"

[[test]]
name = "test_impact"
path = "tests/integration/test_impact.rs"

[[test]]
name = "test_incremental"
path = "tests/integration/test_incremental.rs"

[[test]]
name = "test_errors"
path = "tests/integration/test_errors.rs"

[[test]]
name = "test_edge_cases"
path = "tests/integration/test_edge_cases.rs"

[[test]]
name = "test_json"
path = "tests/integration/test_json.rs"

[[test]]
name = "test_trace"
path = "tests/integration/test_trace.rs"

[[test]]
name = "test_entrypoints"
path = "tests/integration/test_entrypoints.rs"

[[test]]
name = "test_map"
path = "tests/integration/test_map.rs"

[[test]]
name = "test_watch"
path = "tests/integration/test_watch.rs"

[[test]]
name = "test_workspace"
path = "tests/integration/test_workspace.rs"

[[test]]
name = "test_python"
path = "tests/integration/test_python.rs"

[[test]]
name = "test_rust_lang"
path = "tests/integration/test_rust_lang.rs"

[[test]]
name = "test_go"
path = "tests/integration/test_go.rs"
