[package]
name = "scope-mcp"
version = "0.9.0"
edition = "2021"
description = "MCP server for Scope code intelligence CLI"
license = "MIT"

[[bin]]
name = "scope-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
anyhow = "1"
