[package]
name = "scope-benchmark"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = "0.4"
walkdir = "2"
tempfile = "3"
sha2 = "0.10"
